saves/test/demo_full_20240802_193545/rule90/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp rule90_tb.v rule90.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
rule90_tb.v:89: $finish called at 350000 (1ps)

iverilog cmd 2 error:

